[gd_scene load_steps=3 format=3 uid="uid://sc0afjqsuaff"]

[ext_resource type="Script" path="res://Scripts/VictoryScreen.gd" id="1_g6yxt"]
[ext_resource type="Texture2D" uid="uid://dn4knfjpofrok" path="res://Assets/Images/arte1.jpg" id="2_i68vf"]

[node name="VictoryScreen" type="Node2D"]
script = ExtResource("1_g6yxt")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -111.0
offset_top = -20.0
offset_right = 111.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/HBoxContainer2"]
position = Vector2(108, -188)
scale = Vector2(0.335427, 0.335427)
texture = ExtResource("2_i68vf")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Volver" type="Button" parent="CanvasLayer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Volver"

[node name="Siguiente" type="Button" parent="CanvasLayer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Siguiente"

[node name="Repetir" type="Button" parent="CanvasLayer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Repetir"

[connection signal="pressed" from="CanvasLayer/HBoxContainer2/HBoxContainer/Volver" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer2/HBoxContainer/Siguiente" to="." method="_on_NextPuzzleButton_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer2/HBoxContainer/Repetir" to="." method="_on_RepeatButton_pressed"]
